--- a/web/css/welcome.css
+++ b/web/css/welcome.css
@@ -406,7 +406,7 @@ body,html{
 }
 
 .topics-scroll {
-    margin-top: 50px;
+    margin-top: 40px;
     position: relative;
     width: 100%;
     height: auto;
@@ -423,61 +423,84 @@ body,html{
     display: inline-block;
 }
 
-.footer{
-  height: 100px;
-  position: relative;
-  margin-top: 50px;
-  text-align: center;
-  width: 100%;
-  font-size: 30px;
-}
 
-.footer a{
-  text-decoration: none;
-  color: #fff;
-}
-
-.footer a:hover {
-  background: rgba(255,255,255,1);
-  color: #fff;
-}
-
-.footer a::before,
-.footer a::after {
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
-  top: 15%;
-  left: 51%;
-  width: 50px;
-  height: 50px;
-  border: 2px solid rgba(255,255,255,0.1);
-  border-radius: 50%;
-  content: '';
+  width: 100%;
+  height: 100px;
+}
+
+.container {
+  position: relative;
+  width: 24px;
+  height: 24px;
+}
+
+.chevron {
+  position: absolute;
+  width: 28px;
+  height: 8px;
   opacity: 0;
-  -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
-  -moz-transition: -moz-transform 0.3s, opacity 0.3s;
-  transition: transform 0.3s, opacity 0.3s;
-  -webkit-transform: translateX(-50%) translateY(-50%) scale(0.2);
-  -moz-transform: translateX(-50%) translateY(-50%) scale(0.2);
-  transform: translateX(-50%) translateY(-50%) scale(0.2);
+  transform: scale3d(0.5, 0.5, 0.5);
+  animation: move 3s ease-out infinite;
 }
 
-.footer a::after {
-  width: 50px;
-  height: 50px;
-  border-width: 6px;
-  -webkit-transform: translateX(-50%) translateY(-50%) scale(0.8);
-  -moz-transform: translateX(-50%) translateY(-50%) scale(0.8);
-  transform: translateX(-50%) translateY(-50%) scale(0.8);
+.chevron:first-child {
+  animation: move 3s ease-out 1s infinite;
 }
 
-.footer a:hover::before,
-.footer a:hover::after,
-.footer a:focus::before,
-.footer a:focus::after {
-  opacity: 1;
-  -webkit-transform: translateX(-50%) translateY(-50%) scale(1);
-  -moz-transform: translateX(-50%) translateY(-50%) scale(1);
-  transform: translateX(-50%) translateY(-50%) scale(1);
+.chevron:nth-child(2) {
+  animation: move 3s ease-out 2s infinite;
+}
+
+.chevron:before,
+.chevron:after {
+  content: ' ';
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 51%;
+  background: #fff;
+}
+
+.chevron:before {
+  left: 0;
+  transform: skew(0deg, 30deg);
+}
+
+.chevron:after {
+  right: 0;
+  width: 50%;
+  transform: skew(0deg, -30deg);
+}
+
+@keyframes move {
+  25% {
+    opacity: 1;
+
+  }
+  33% {
+    opacity: 1;
+    transform: translateY(30px);
+  }
+  67% {
+    opacity: 1;
+    transform: translateY(40px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+  }
+}
+
+
+@keyframes pulse {
+  to {
+    opacity: 1;
+  }
 }
 
 
